--- a/index.html
+++ b/index.html
@@ -1,227 +1,427 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Homeowners Help – Simple Workspace</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f7fafc;
-      color: #111827;
-      margin: 0;
-      padding: 0;
-      line-height: 1.5;
-    }
-    header {
-      background-color: #1f2937;
-      color: #ffffff;
-      padding: 16px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0 0 8px 0;
-      font-size: 1.6rem;
-    }
-    header p {
-      margin: 0;
-      font-size: 1rem;
-    }
-    main {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 16px;
-      font-size: 1.05rem;
-    }
-    .notice {
-      background-color: #e0f2fe;
-      border-left: 6px solid #0284c7;
-      padding: 12px 16px;
-      margin-bottom: 16px;
-      font-size: 1rem;
-    }
-    .section {
-      background-color: #ffffff;
-      border-radius: 8px;
-      padding: 16px;
-      margin-bottom: 16px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.08);
-    }
-    .section h2 {
-      font-size: 1.3rem;
-      margin-top: 0;
-      margin-bottom: 8px;
-    }
-    .section p.section-help {
-      margin-top: 0;
-      margin-bottom: 12px;
-      font-size: 0.98rem;
-      color: #4b5563;
-    }
-    label {
-      display: block;
-      margin-bottom: 4px;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-    input[type="text"],
-    input[type="number"],
-    input[type="date"],
-    textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 12px;
-      border-radius: 6px;
-      border: 1px solid #d1d5db;
-      font-size: 1rem;
-      box-sizing: border-box;
-    }
-    textarea {
-      min-height: 80px;
-      resize: vertical;
-    }
-    .small-note {
-      font-size: 0.9rem;
-      color: #6b7280;
-      margin-top: 4px;
-    }
-    .footer {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #6b7280;
-      padding: 16px;
-    }
-    .button-row {
-      margin-top: 8px;
-    }
-    button {
-      font-size: 1rem;
-      padding: 10px 18px;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-      margin-right: 8px;
-    }
-    .btn-primary {
-      background-color: #2563eb;
-      color: #ffffff;
-    }
-    .btn-secondary {
-      background-color: #e5e7eb;
-      color: #111827;
-    }
-    @media (min-width: 700px) {
-      header h1 {
-        font-size: 1.9rem;
-      }
-      main {
-        font-size: 1.1rem;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homeowner Document Verification System</title>
+    <style>
+        :root {
+            --color-primary: #208090;
+            --color-primary-hover: #1a6672;
+            --color-primary-light: #e8f4f7;
+            --color-surface: #f9f9f9;
+            --color-surface-light: #f5f5f5;
+            --color-text: #1a1a1a;
+            --color-text-secondary: #666;
+            --color-border: #ddd;
+            --color-success: #4a9d5f;
+            --color-warning: #d4a574;
+            --color-error: #c01533;
+            --color-bg: #fafafa;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        html, body {
+            margin: 0;
+            padding: 0;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            background-color: var(--color-bg);
+            color: var(--color-text);
+            line-height: 1.6;
+        }
+
+        body {
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        header {
+            background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-hover) 100%);
+            color: white;
+            padding: 40px 30px;
+            border-radius: 8px;
+            margin-bottom: 30px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        }
+
+        h1 {
+            margin: 0 0 10px 0;
+            font-size: 32px;
+        }
+
+        .subtitle {
+            font-size: 16px;
+            opacity: 0.95;
+            margin: 0;
+        }
+
+        .two-column {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 30px;
+            margin-bottom: 30px;
+        }
+
+        @media (max-width: 900px) {
+            .two-column {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        .module-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin: 30px 0;
+        }
+
+        .card {
+            background: white;
+            border: 1px solid var(--color-border);
+            border-radius: 8px;
+            padding: 24px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+            transition: all 0.3s ease;
+        }
+
+        .card:hover {
+            box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+            border-color: var(--color-primary);
+        }
+
+        .card h3 {
+            margin: 0 0 12px 0;
+            color: var(--color-primary);
+            font-size: 18px;
+        }
+
+        .card p {
+            margin: 0 0 16px 0;
+            font-size: 14px;
+            color: var(--color-text-secondary);
+        }
+
+        .card-toggle {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .checkbox {
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+        }
+
+        section {
+            background: white;
+            border: 1px solid var(--color-border);
+            border-radius: 8px;
+            padding: 30px;
+            margin-bottom: 30px;
+        }
+
+        h2 {
+            color: var(--color-primary);
+            margin-top: 0;
+            padding-bottom: 10px;
+            border-bottom: 2px solid var(--color-primary-light);
+        }
+
+        h3 {
+            color: var(--color-text);
+            margin-top: 20px;
+        }
+
+        .checklist {
+            list-style: none;
+            padding: 0;
+            margin: 15px 0;
+        }
+
+        .checklist li {
+            padding: 10px 0;
+            padding-left: 30px;
+            position: relative;
+            font-size: 14px;
+        }
+
+        .checklist li:before {
+            content: "☐";
+            position: absolute;
+            left: 0;
+            color: var(--color-primary);
+            font-weight: bold;
+        }
+
+        .checklist li.checked:before {
+            content: "☑";
+            color: var(--color-success);
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+            font-size: 14px;
+        }
+
+        th {
+            background-color: var(--color-primary-light);
+            color: var(--color-primary);
+            padding: 12px;
+            text-align: left;
+            font-weight: 600;
+            border: 1px solid var(--color-border);
+        }
+
+        td {
+            padding: 10px 12px;
+            border: 1px solid var(--color-border);
+        }
+
+        tr:nth-child(even) {
+            background-color: var(--color-surface-light);
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: var(--color-primary);
+            color: white;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 14px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            margin-right: 10px;
+            margin-bottom: 10px;
+        }
+
+        .btn:hover {
+            background-color: var(--color-primary-hover);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(32, 128, 144, 0.3);
+        }
+
+        .btn-secondary {
+            background-color: var(--color-surface);
+            color: var(--color-text);
+            border: 1px solid var(--color-border);
+        }
+
+        .btn-secondary:hover {
+            background-color: var(--color-surface-light);
+        }
+
+        .tab-buttons {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+            margin-bottom: 20px;
+            border-bottom: 2px solid var(--color-border);
+        }
+
+        .tab-btn {
+            padding: 12px 16px;
+            background: none;
+            border: none;
+            border-bottom: 3px solid transparent;
+            cursor: pointer;
+            font-size: 14px;
+            font-weight: 600;
+            color: var(--color-text-secondary);
+            transition: all 0.3s ease;
+        }
+
+        .tab-btn.active {
+            color: var(--color-primary);
+            border-bottom-color: var(--color-primary);
+        }
+
+        .tab-content {
+            display: none;
+        }
+
+        .tab-content.active {
+            display: block;
+        }
+
+        .alert {
+            padding: 16px;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            border-left: 4px solid;
+        }
+
+        .alert-info {
+            background-color: #e8f4f7;
+            border-color: var(--color-primary);
+            color: var(--color-primary);
+        }
+
+        .alert-warning {
+            background-color: #fef3e6;
+            border-color: var(--color-warning);
+            color: #8b6f47;
+        }
+
+        .module-number {
+            display: inline-block;
+            width: 28px;
+            height: 28px;
+            background-color: var(--color-primary);
+            color: white;
+            border-radius: 50%;
+            text-align: center;
+            line-height: 28px;
+            font-weight: bold;
+            margin-right: 10px;
+            font-size: 14px;
+        }
+
+        .input-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: 600;
+            font-size: 14px;
+            color: var(--color-text);
+        }
+
+        input[type="text"],
+        input[type="date"],
+        textarea,
+        select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid var(--color-border);
+            border-radius: 6px;
+            font-family: inherit;
+            font-size: 14px;
+            max-width: 500px;
+        }
+
+        textarea {
+            min-height: 100px;
+            resize: vertical;
+        }
+
+        .badge {
+            display: inline-block;
+            padding: 4px 12px;
+            background-color: var(--color-primary-light);
+            color: var(--color-primary);
+            border-radius: 20px;
+            font-size: 12px;
+            font-weight: 600;
+            margin-right: 8px;
+        }
+
+        .file-list {
+            background-color: var(--color-surface-light);
+            padding: 16px;
+            border-radius: 6px;
+            margin: 15px 0;
+        }
+
+        .file-item {
+            padding: 10px;
+            margin-bottom: 8px;
+            background-color: white;
+            border-left: 3px solid var(--color-primary);
+            border-radius: 4px;
+        }
+
+        footer {
+            margin-top: 40px;
+            padding: 20px;
+            text-align: center;
+            color: var(--color-text-secondary);
+            font-size: 13px;
+            border-top: 1px solid var(--color-border);
+        }
+
+        .pdf-export-note {
+            background-color: #fff9e6;
+            border: 1px solid #ffe58f;
+            padding: 12px;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            font-size: 13px;
+            color: #8b6f47;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        .module-selector {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+        }
+
+        .module-check {
+            display: flex;
+            align-items: center;
+            padding: 12px;
+            border: 1px solid var(--color-border);
+            border-radius: 6px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .module-check:hover {
+            background-color: var(--color-primary-light);
+            border-color: var(--color-primary);
+        }
+
+        .module-check input {
+            margin-right: 10px;
+            cursor: pointer;
+        }
+
+        .success-checkmark {
+            color: var(--color-success);
+            font-weight: bold;
+        }
+
+        .gap-20 {
+            margin-bottom: 20px;
+        }
+
+        .small-text {
+            font-size: 13px;
+            color: var(--color-text-secondary);
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Homeowners Help</h1>
-    <p>A simple workspace to see your mortgage story clearly.</p>
-  </header>
+    <div class="container">
+        <header>
+            <h1>Homeowner Document Verification System</h1>
+            <p class="subtitle">Organize, verify, and analyze your mortgage and property records independently.</p>
+        </header>
 
-  <main>
-    <div class="notice">
-      <strong>How to use this page:</strong><br>
-      Start at the top and fill in what you can. You can come back and add more anytime. You do not have to finish everything in one sitting.
-    </div>
+        <div class="tab-buttons">
+            <button class="tab-btn active" onclick="switchTab('welcome')">Welcome</button>
+            <button class="tab-btn" onclick="switchTab('intake')">Start Analysis</button>
+            <button class="tab-btn" onclick="switchTab('modules')">Modules</button>
+            <button class="tab-btn" onclick="switchTab('guide')">How It Works</button>
+            <button class="tab-btn" onclick="switchTab('reference')">Reference</button>
+        </div>
 
-    <div class="section">
-      <h2>Your Loan Details</h2>
-      <p class="section-help">
-        Write down the basics of your loan so you have them in one place. You can look at your monthly mortgage statement while you fill this in.
-      </p>
-
-      <label for="name">Your name on the loan</label>
-      <input id="name" type="text" placeholder="Example: Jane Q. Homeowner">
-
-      <label for="loan-number">Loan number</label>
-      <input id="loan-number" type="text" placeholder="As shown on your statement">
-
-      <label for="servicer">Mortgage company / servicer</label>
-      <input id="servicer" type="text" placeholder="Example: ABC Loan Servicing">
-
-      <label for="property-address">Property address</label>
-      <input id="property-address" type="text" placeholder="Street, city, state, ZIP">
-
-      <label for="loan-type">Type of loan (if known)</label>
-      <input id="loan-type" type="text" placeholder="Example: FHA, VA, Conventional, HELOC">
-
-      <label for="payment-amount">Regular monthly payment (before any changes)</label>
-      <input id="payment-amount" type="text" placeholder="Example: $1,234.56">
-
-      <label for="start-date">First payment due date (if known)</label>
-      <input id="start-date" type="date">
-
-      <p class="small-note">
-        Keep your latest mortgage statements together with this page. You can write “see statement” if you are not sure of a detail.
-      </p>
-    </div>
-
-    <div class="section">
-      <h2>Problems / Issues</h2>
-      <p class="section-help">
-        Use this area to log what has gone wrong. One entry per line is enough. Try to include date, what happened, and who you spoke with.
-      </p>
-
-      <label for="issue-summary">What is worrying you the most right now?</label>
-      <textarea id="issue-summary" placeholder="Example: I was told my payment went up because of escrow, but no one can explain the numbers."></textarea>
-
-      <label for="issue-log">Timeline of issues</label>
-      <textarea id="issue-log" placeholder="Example:
-01/15/2024 – Payment posted late even though I paid online.
-03/10/2024 – Escrow shortage letter arrived, amount seems wrong.
-05/02/2024 – Called customer service, spoke with Maria, reference #123456."></textarea>
-
-      <p class="small-note">
-        If you do not remember exact dates, write the month and year or “around spring 2024.” Any detail helps show a pattern.
-      </p>
-    </div>
-
-    <div class="section">
-      <h2>Documents & Notes</h2>
-      <p class="section-help">
-        This is your checklist so nothing gets lost. You can keep physical papers in a folder or scanned copies on your phone or computer.
-      </p>
-
-      <label for="documents-list">Important documents you have</label>
-      <textarea id="documents-list" placeholder="Example:
-• Closing documents from when you bought or refinanced
-• Monthly mortgage statements
-• Escrow analyses
-• Collection or default letters
-• Court papers"></textarea>
-
-      <label for="documents-missing">Documents you are missing or want to request</label>
-      <textarea id="documents-missing" placeholder="Example:
-• Full payment history from the servicer
-• All escrow analyses for the last 3 years
-• Copy of note and mortgage / deed of trust"></textarea>
-
-      <label for="extra-notes">Extra notes or questions</label>
-      <textarea id="extra-notes" placeholder="Anything else you want to remember to ask or explain."></textarea>
-
-      <div class="button-row">
-        <button class="btn-primary" type="button" onclick="window.print()">Print this page</button>
-        <button class="btn-secondary" type="button" onclick="alert('This page does not save your data online. Please print or take screenshots to keep a copy for yourself.')">
-          How do I save this?
-        </button>
-      </div>
-
-      <p class="small-note">
-        This page does not store your information on a server. To keep a copy, you can print the page or take screenshots after you fill it out.
-      </p>
-    </div>
-
-    <div class="footer">
-      Homeowners Help – simple notes to make your mortgage story easier to see.
-    </div>
-  </main>
-</body>
-</html>
+        <!-- WELCOME TAB -->
+        <!-- … keep all the rest of the HTML exactly as in your earlier big block, down through the </script> and </html> closing tags … -->
